--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.diff
+*.err
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+
+pids
+logs
+results
+
+# OS or Editor folders
+.DS_Store
+Thumbs.db
+.cache
+
+npm-debug.log
+*.sass-cache/
+*node_modules/
+*bower_components/
+*vendors/
 _site/
