all the changes

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -3,8 +3,8 @@ experience:
     jobs:
         - title: "Senior Field Manager"
           organization: "Share Our Strength"
-          city: ""
-          state: "Washington, D.C."
+          city: "Washington"
+          state: "D.C."
           start_date: "Jan 2014"
           start_date_format: "2014-01" #format: "2104-01-03"
           end_date: "Present"
@@ -14,6 +14,57 @@ experience:
             - "Evaluate and continually refine partner strategies and tactics to implement programs in 2014 reaching an additional 40,000 children, serving an additional 2M meals, and providing nutrition education to 17,000 families"
             - "Administer $500,000+ in state budgets, $250,000+ in grant funding, reporting and progress to goal tracking "
             - "Serve as primary liaison between state partners and Share Our Strength, policy makers, direct service providers and outside influencers "
+        - title: "SENIOR MANAGER OF OPERATIONS"
+          organization: "Share Our Strength"
+          city: "Washington"
+          state: "D.C."
+          start_date: "Apr 2013"
+          start_date_format: "" #format: "2104-01-03"
+          end_date: "Dec 2013"
+          end_date_format: "" #format: "2104-01-03"
+          overview: "Oversaw 210% increase in outreach expansion of a nationwide skills-based nutrition education program from 9,000 to 20,000 participants in 2013. Operationalized systems to track program communications, event planning and execution, staff, volunteer, partner and participant engagement."
+          bullets:
+            - "Managed 5 full-time staff and cultivated regional and national programmatic partnerships"
+            - "Developed reporting mechanisms to guide partners and collaborators to program commitments"
+            - "Streamlined materials distribution, grant disbursement and implementation of new program initiatives"
+        - title: "STARTUP OPERATIONS CONSULTANT"
+          organization: "Independent Contracts"
+          city: "Washington"
+          state: "D.C."
+          start_date: "Jan 2013"
+          start_date_format: "" #format: "2104-01-03"
+          end_date: "June 2013"
+          end_date_format: "" #format: "2104-01-03"
+          overview: "Coordinated startup operations for progressive organizations. Advised on hiring, payroll, health care, financial and physical infrastructure. Consulted on budget creation, startup purchasing, and generated support systems for long-term functionality."
+          bullets:
+            - "United We Dream"
+            - "Blue Labs, Inc."
+            - "Code for Progress"
+        - title: "DEPUTY DIRECTOR OF VOLUNTEER OPERATIONS"
+          organization: "Presidential Inaugural Committee"
+          city: "Washington"
+          state: "D.C."
+          start_date: "Dec 2012"
+          start_date_format: "" #format: "2104-01-03"
+          end_date: "Jan 2013"
+          end_date_format: "" #format: "2104-01-03"
+          overview: "Managed Inaugural Volunteer program logistics and executed plan to train, deploy and provide staging locations, volunteer materials, food and beverages for 15,000 Inaugural Weekend Volunteers."
+          bullets:
+            - "Directed logistics for over 15 volunteer trainings, including four general trainings of up to 4,000 volunteers each"
+            - "Researched, selected and interfaced with multiple vendors to provide staging locations in both tents and government buildings, refreshments and other supplies to volunteers assisting inaugural events"
+        - title: "REGIONAL OPERATIONS DIRECTOR"
+          organization: "Obama for America"
+          city: "Chicago"
+          state: "IL"
+          start_date: "Aug 2011"
+          start_date_format: "" #format: "2104-01-03"
+          end_date: "Dec 2012"
+          end_date_format: "" #format: "2104-01-03"
+          overview: "Worked with leadership in campaign headquarters and managed region-wide field operations for up to thirty states in three regions. Oversaw infrastructure building, budget and resource management, compliance, staffing and hiring, process development, system creation, data collection and upkeep, and project management of campaign-wide tasks and initiatives. Oversaw all GOTV operations, budgets and logistics for battleground states including OH, VA, MI, NH and PA."
+          bullets:
+            - "Managed 5 Operations Directors and 16 associated staff in battleground states, supervised hiring process for over 1,450 staff and identification and selection of 350 offices"
+            - "Administered the distribution of $40 million in funds based on strategic priorities and spending patterns"
+            - "Directed process to select and customize a nationwide resume collection and storage database resulting in the identification of over 50,000 potential candidates which was used by all 50 states to recruit and hire staff"
 education:
     header: "Education"
     institutions:
