moved a bunch of stuff into variables

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ owner-page:     "http://abarbertevelin.com"
 owner-email:    "ashleigh@abarbertevelin.com"
 
 excerpt_separator: ""
+
+typekit_id: "szy1gvq"
+google_analytics_id: "UA-49040380-1"
