--- a/_data/main.yml
+++ b/_data/main.yml
@@ -1,2 +1,16 @@
 name: "Ashleigh Barber"
 intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at fermentum metus, eget varius lacus. Cras porta dolor vitae felis molestie, eu pulvinar risus blandit. Nullam euismod dui ut arcu viverra, et dictum dui ultricies. Suspendisse vel commodo tellus. Curabitur id auctor erat, vel fermentum mauris. Nam euismod fermentum magna, at ornare nunc semper mattis. Quisque convallis rhoncus tellus sit amet semper. Etiam dignissim rutrum luctus. Praesent elit sapien, ultricies sit amet tincidunt nec, venenatis in nisi. Mauris pulvinar a metus at dignissim. Aenean viverra magna eu dictum ultricies. Maecenas mollis at diam a rutrum. Duis a augue sit amet odio auctor rhoncus a faucibus tortor. Nulla quis urna tellus. Sed vitae mauris eu massa sagittis porta vitae ut lacus."
+
+meta_description: ""
+meta_image: ""
+
+google_plus_id: ""
+
+og_title: ""
+og_description: ""
+og_image: ""
+
+twitter_handle: "" #with '@'
+twitter_title: ""
+twitter_description: ""
+twitter_image: ""
